--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+html { overflow-y: scroll; }
+
 body {
     margin:0;
     padding:0;
@@ -5,7 +7,7 @@ body {
     background: linear-gradient(120deg, #5C9BF8, #E765F5);
     position:relative;
     height: 100vh;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 
